--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
   <div id="context-menu" class="context-menu" style="display: none;">
     <div class="context-menu-item" id="delete-row-item">Slett rad</div>
   </div>
-  </body>
+</body>
+<script type="module" src="./script.js"></script>
 </html>
