--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Glass Table</title>
   <link rel="stylesheet" href="/style.css" />
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
   <div class="wrapper" id="app">
